client/src/App.css
#universal-styling{
    font-family: 'Roboto Condensed', sans-serif;
    background-color: rgb(26, 26, 26);
    color: #ffffff;
}

#react-navbar{
    background-color: transparent;
    color: white;
}

.page-footer {
    margin-top: 100px;
    line-height: 20px;
    background-color: rgb(26, 26, 26);
  }

